kuber/hw-12/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-12-svc
spec:
  selector:
    app: hw-12
  ports:
    - port: 80
      name: http
      targetPort: http
    - port: 8081
      name: actuator
      targetPort: actuator
  type: ClusterIP
