kuber/hw-12/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-12-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hw-12-svc
                port:
                  name: http
          - path: /()(actuator/health.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hw-12-svc
                port:
                  name: actuator
          - path: /(otusapp/skhandorin/?)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hw-12-svc
                port:
                  name: http
